# ApplicationManager

./: CMakeLists.txt  build.sh  run.sh
native/: CMakeLists.txt  native.pro
native/AC/: CMakeLists.txt
native/UICommon/: CMakeLists.txt  UICommon.pro
system-ui/: main.qml
